Fix nav menu button misalignment

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -9,8 +9,6 @@
 	grid-auto-flow: column;
 	grid-auto-columns: 50%;
 	z-index: 1;
-	transition: all 0.6s ease 0s;
-	-webkit-transition: all 0.6s ease 0s;
 	
 	@media (max-width: 900px) {
 		grid-auto-columns: 100%;
@@ -45,7 +43,6 @@
 			--size: calc(var(--nav-bar-height) / 3);
 			--bar-height: 4px;
 			position: fixed;
-			align-self: center;
 			right: 0;
 			display: flex;
 			flex-direction: column;
@@ -54,6 +51,7 @@
 			width: var(--size);
 			height: var(--size);
 			margin-right: var(--size);
+			margin-top: var(--size);
 			z-index: 2;
 		}
 	}
